# mabr

./: .gitignore  CMakeLists.txt  README.md  alignment.cpp  alignment.hpp  amino_group.cpp  amino_group.hpp  basic_tree.hpp  block.cpp  block.hpp  blocktree.cpp  blocktree.hpp  linear_processor.cpp  linear_processor.hpp  mabr-c.h  mabr.acd  mabr.cpp  mabr.hpp  main.c  matrix.cpp  matrix.hpp  processor.cpp  processor.hpp  region.cpp  region.hpp  test.fna
